# universalgene

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_20250409.txt  requirements_old.txt
logs/: dann_training_11224954_4294967294.out  dann_training_11225024_4294967294.out  dann_training_11225044_4294967294.out  dann_training_11227582_4294967294.out  dann_training_11237560_4294967294.out
src/: data_download.py  data_preprocess.ipynb  data_viz.ipynb
src/.ipynb_checkpoints/: data_preprocess-checkpoint.ipynb
src/bash_scripts/: benchmark.sh  big_transformer_from_experiments.sh  contrastive1.sh  contrastive10.sh  contrastive11.sh  contrastive12.sh  contrastive13.sh  contrastive2.sh  contrastive3.sh  contrastive4.sh  contrastive5.sh  contrastive6.sh  contrastive7.sh  contrastive8.sh  contrastive9.sh  mult_n.sh  mult_y.sh
src/contrastive/: analysis1.ipynb  constrastive_visualization.ipynb  contrast_benchmark.py  contrastive_model.py  contrastive_modules.py  contrastive_visualization_FINAL.ipynb  preprocess.ipynb  preprocess.py  train_contrastive.py  viz_callback.py
src/dann/: cdan.py  dann_modules.py  dann_preprocess.ipynb  dann_preprocess_tissue_split.ipynb  dann_training.ipynb  dann_training.py  dann_visualization.ipynb  dann_visualization_FINAL.ipynb  lightning_dann.py  run_batch_training.sh  run_dann_training.sh  transformer_dann.py  viz_callback.py
src/dann/logs/: dann_training_11072212_4294967294.out  dann_training_11072298_4294967294.out  dann_training_11072377_4294967294.out  dann_training_11078912_4294967294.out  (+2 more)
(+2 files in other folders)
